--- a/css/styles.css
+++ b/css/styles.css
@@ -29,4 +29,47 @@ html {
 }
 
 body {
+  font-family: Urbanist, Arial, Helvetica, sans-serif;
+  color: var(--color-dark-2);
+  font-size: 1.4rem;
+  line-height: 1.6;
+}
+
+h1,
+h2,
+h3 {
+  color: var(--color-headings);
+}
+
+h1 {
+  /* font-size: 4.8rem; */
+  font-size: 3.4rem;
+}
+
+h2 {
+  /* font-size: 3.6rem; */
+  font-size: 2.5rem;
+}
+
+h3 {
+  /* font-size: 2.4rem; */
+  font-size: 1.8rem;
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    font-size: 1.6rem;
+  }
+
+  h1 {
+    font-size: 4.8rem;
+  }
+
+  h2 {
+    font-size: 3.6rem;
+  }
+
+  h3 {
+    font-size: 2.4rem;
+  }
 }
