--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ body {
   color: var(--color-dark-2);
   font-size: 1.4rem;
   line-height: 1.6;
+
+  padding: 30px;
 }
 
 h1,
@@ -71,5 +73,38 @@ h3 {
 
   h3 {
     font-size: 2.4rem;
+  }
+}
+
+/* Links */
+a {
+  text-decoration: none;
+}
+
+.link-arrow {
+  color: var(--color-accent);
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  padding-bottom: 0.3rem;
+  border-bottom: 1px solid var(--color-accent);
+}
+
+.link-arrow:hover {
+  /* box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.3); */
+}
+
+.link-arrow::after {
+  content: "\2192";
+  margin-left: 0.5rem;
+  transition: margin 0.3s ease-out;
+}
+
+.link-arrow:hover::after {
+  margin-left: 1rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .link-arrow {
+    font-size: 1.6rem;
   }
 }
