--- a/css/styles.css
+++ b/css/styles.css
@@ -255,3 +255,26 @@ a {
 .btn--block {
   display: block;
 }
+
+/* Inputs */
+.input {
+  display: block;
+  padding: 1.2rem 2rem;
+  font-size: 1.2rem;
+  color: inherit;
+  border: 1px solid var(--color-light-2);
+  border-radius: 30px;
+  outline: none;
+  font-family: inherit;
+  width: 100%;
+}
+
+::placeholder {
+  color: var(--color-light-3);
+}
+
+@media screen and (min-width: 1024px) {
+  .input {
+    font-size: 1.4rem;
+  }
+}
