--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@
 
   --border-radius-round: 30px;
   --border-radius-full: 50%;
+  --border-radius-small: 5px;
+
   --border-light: 1px solid var(--color-light-2);
 }
 
@@ -294,4 +296,26 @@ a {
 
 .input-group .btn {
   margin: 3px;
+}
+
+/* Cards */
+.card {
+  border-radius: var(--border-radius-small);
+  box-shadow: 0 0 2rem 1rem var(--color-light-2);
+  overflow: hidden;
+}
+
+.card__heading,
+.card__body {
+  padding: 2rem;
+}
+
+.card--primary .card__heading {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+}
+
+.card--secondary .card__heading {
+  background-color: var(--color-secondary);
+  color: var(--color-white);
 }
