--- a/css/styles.css
+++ b/css/styles.css
@@ -124,11 +124,13 @@ a {
 .badge--primary {
   background-color: var(--color-primary-light);
   color: var(--color-white);
+  opacity: 0.8;
 }
 
 .badge--secondary {
   background-color: var(--color-secondary-light);
   color: var(--color-white);
+  opacity: 0.8;
 }
 
 .badge--small {
@@ -163,7 +165,7 @@ a {
 .list--tick .list__item::before {
   content: "\2713";
   color: green;
-  margin-right: 0.5rem;
+  margin-right: 1rem;
 }
 
 /* Icons */
@@ -255,7 +257,7 @@ a {
 }
 
 .btn--block {
-  display: block;
+  width: 100%;
 }
 
 /* Inputs */
@@ -318,4 +320,41 @@ a {
 .card--secondary .card__heading {
   background-color: var(--color-secondary);
   color: var(--color-white);
+}
+
+/* Plans */
+.plan__name {
+  color: var(--color-white);
+  font-size: 1.6rem;
+  letter-spacing: 0.5px;
+}
+
+.plan__price {
+  font-size: 4rem;
+}
+
+.plan__billing-cycle {
+  opacity: 0.8;
+  font-weight: 300;
+  margin-right: 1rem;
+}
+
+.plan__description {
+  display: block;
+  font-weight: 300;
+  opacity: 0.8;
+  letter-spacing: 1px;
+}
+
+.card__body .list__item {
+  letter-spacing: 1px;
+}
+
+.card__body .list__item:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+/* Utilities */
+.mb-4 {
+  margin-bottom: 4rem;
 }
