--- a/css/styles.css
+++ b/css/styles.css
@@ -393,3 +393,39 @@ a {
 .media__image {
   margin-top: 0.5rem;
 }
+
+/* Quote */
+.quote__text {
+  font-style: italic;
+  font-size: 1.3rem;
+  line-height: 1.3;
+  color: var(--color-dark-3);
+  margin-bottom: 1rem;
+}
+
+.quote__text::before {
+  content: open-quote;
+}
+
+.quote__text::after {
+  content: close-quote;
+}
+
+.quote__line {
+  margin-top: -9px;
+}
+
+.quote__identity {
+  gap: 0;
+}
+
+.quote__company {
+  color: var(--color-primary);
+  opacity: 0.4;
+}
+
+@media screen and (min-width: 1024px) {
+  .quote__line {
+    margin-top: -5px;
+  }
+}
