--- a/css/styles.css
+++ b/css/styles.css
@@ -549,3 +549,49 @@ a {
     justify-self: center;
   }
 }
+
+/* Collapsibles */
+.collapsible {
+}
+
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.collapsible .icon-container {
+  background-color: var(--color-dark-3);
+  width: 2rem;
+  height: 2rem;
+}
+
+.collapsible__chevron {
+  width: 1rem;
+  height: 1rem;
+  fill: var(--color-white);
+
+  transform: rotate(-90deg);
+  transition: all 0.3s ease-out;
+}
+
+.collapsible__heading {
+  font-size: 1.8rem;
+}
+
+.collapsible__content {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-out;
+}
+
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
+}
+
+.collapsible--expanded .collapsible__content {
+  max-height: 100vh;
+  opacity: 1;
+}
