--- a/css/styles.css
+++ b/css/styles.css
@@ -595,3 +595,35 @@ a {
   max-height: 100vh;
   opacity: 1;
 }
+
+/* Blocks */
+.block {
+  --padding-vertical: 6rem;
+  padding: var(--padding-vertical) 2rem;
+}
+
+.block__dark {
+  background-color: var(--color-black);
+  color: var(--color-light-2);
+}
+
+.block__dark .block__heading {
+  color: var(--color-white);
+}
+
+.block--skewed-right {
+  clip-path: polygon(0% 0%, 100% 0, 100% 85%, 0 100%);
+}
+
+.block--skewed-right {
+  padding-bottom: 10rem;
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+.block__heading-container {
+  text-align: center;
+}
