Build the hero section

--- a/components/navigation.html
+++ b/components/navigation.html
@@ -6,9 +6,10 @@
     </a>
     <nav class="nav">
       <ul class="nav__list">
+        <li class="nav__item">Hosting</li>
+        <li class="nav__item">VPS</li>
+        <li class="nav__item">Domain</li>
         <li class="nav__item">Pricing</li>
-        <li class="nav__item">Contact</li>
-        <li class="nav__item">About</li>
       </ul>
     </nav>
     <div class="hamburger">
