--- a/components/block.html
+++ b/components/block.html
@@ -5,7 +5,7 @@
   </div>
 </section>
 
-<section class="block block__dark block--skewed-right">
+<section class="block block--dark block--skewed-right">
   <div class="block__heading-container container">
     <h2 class="block__heading">Dare to Dream</h2>
     <p class="block__text">Lorem ipsum Dare to Dream dolor sit amet.</p>
