Build the domain block section

--- a/components/hero.html
+++ b/components/hero.html
@@ -1,4 +1,4 @@
-<section class="block block--dark block--skewed-right">
+<section class="block block--dark block--skewed-right hero">
   <div class="container grid grid--cols-2">
     <header class="block__heading-container hero__content">
       <h1 class="block__heading">Cloud hosting for Pros</h1>
