--- a/components/features.html
+++ b/components/features.html
@@ -1,3 +1,8 @@
+<div class="block__heading-container">
+  <h2>Host On The Cloud To Keep Growing</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, mollitia?</p>
+</div>
+
 <section class="block grid grid--cols-2 features container">
   <div class="feature__content">
     <span class="icon-container mb-2">
