Build the showcase section

--- a/css/styles.css
+++ b/css/styles.css
@@ -899,6 +899,54 @@ a {
   }
 }
 
+/* Showcase */
+.showcase {
+}
+
+.showcase__heading {
+  color: var(--color-white);
+  margin-bottom: 4rem;
+  text-align: center;
+  line-height: initial;
+}
+
+.showcase__content {
+  gap: 4rem;
+  padding: 1rem;
+}
+
+.showcase__image {
+  width: 100%;
+}
+
+.showcase__media {
+  width: 100%;
+}
+
+.showcase__media .media__title {
+  color: var(--color-white);
+}
+
+.showcase__media .media__description {
+  color: var(--color-white);
+}
+
+@media screen and (min-width: 768px) {
+  .showcase__content {
+    grid-template-columns: repeat(2, 50%);
+  }
+
+  .showcase__image {
+    width: auto;
+    max-width: 700px;
+    justify-self: end;
+  }
+
+  .showcase__media {
+    padding: 1rem;
+  }
+}
+
 /* Footer */
 .footer__container {
   background-color: var(--color-dark-2);
