Build the entire page

--- a/components/plans-block.html
+++ b/components/plans-block.html
@@ -1,4 +1,4 @@
-<div class="grid grid--cols-3 plans container">
+<section class="grid grid--cols-3 plans container">
   <div class="plan">
     <div class="card card--secondary">
       <header class="card__heading">
@@ -64,4 +64,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
