--- a/css/styles.css
+++ b/css/styles.css
@@ -217,10 +217,10 @@ a {
   vertical-align: middle;
 }
 
-.btn:hover {
+/* .btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
-}
+} */
 
 .btn:active {
   transform: translateY(-1px);
@@ -394,6 +394,10 @@ a {
   margin-bottom: 1rem;
 }
 
+.mt-6 {
+  margin-top: 8rem;
+}
+
 /* Media */
 .media {
   display: flex;
@@ -521,6 +525,12 @@ a {
   border-radius: var(--border-radius-small);
 }
 
+.callout__container {
+  max-width: 1100px;
+  margin: 0 auto;
+  transform: translateY(8rem);
+}
+
 .callout--primary {
   background-color: var(--color-primary);
 }
@@ -612,7 +622,7 @@ a {
 
 /* Blocks */
 .block {
-  --padding-vertical: 6rem;
+  --padding-vertical: 10rem;
   padding: var(--padding-vertical) 2rem;
 }
 
@@ -630,6 +640,11 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .block {
+    --padding-vertical: 7rem;
+    /* padding: var(--padding-vertical) 2rem; */
+  }
+
   .block--skewed-right {
     clip-path: polygon(0% 0%, 100% 0, 100% 85%, 0 100%);
   }
@@ -667,6 +682,8 @@ a {
 .header {
   position: fixed;
   width: 100%;
+  z-index: 15;
+  background-color: var(--color-black);
 }
 
 .header__content {
@@ -778,13 +795,14 @@ a {
 }
 
 /* Hero */
+
 .hero__tagline {
   font-size: 1.8rem;
   margin: 1rem 0 2.5rem 0;
 }
 
 .hero__image {
-  width: 80%;
+  width: 100%;
   justify-self: center;
 }
 
@@ -950,13 +968,16 @@ a {
 /* Footer */
 .footer__container {
   background-color: var(--color-dark-2);
+  /* margin-top: 15rem; */
 }
 
 .footer {
+  padding-top: 5rem;
 }
 
 .footer__heading {
   color: var(--color-white);
+  text-transform: uppercase;
 }
 
 .footer__links {
@@ -984,6 +1005,15 @@ a {
   .footer {
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 2rem;
+  }
+
+  .footer .icon-container {
+    display: none;
+  }
+
+  .footer .collapsible__content {
+    opacity: 1;
+    max-height: 100%;
   }
 
   .footer__section {
